--- a/.editorconfig
+++ b/.editorconfig
@@ -6,5 +6,5 @@ insert_final_newline = true
 
 [*.{html,css,js}]
 charset = utf-8
-indent_style = space
-indent_size = 4
+indent_style = tab
+tab_width = 4
